--- a/lin-ycv.EverythingCmdPal.installer.yaml
+++ b/lin-ycv.EverythingCmdPal.installer.yaml
@@ -11,7 +11,7 @@ InstallerType: msix
 PackageFamilyName: VictorLin.EverythingCP_yazqh14evg2ve
 Dependencies:
   PackageDependencies:
-  - PackageIdentifier: Microsoft.PowerToys
+#  - PackageIdentifier: Microsoft.PowerToys
   - PackageIdentifier: Microsoft.WindowsAppRuntime.1.6
 Installers:
 - Architecture: x64
