--- a/lin-ycv.EverythingCmdPal.yaml
+++ b/lin-ycv.EverythingCmdPal.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.9.0.schema.json
 
 PackageIdentifier: lin-ycv.EverythingCmdPal
-PackageVersion: _VERSION_.
+PackageVersion: _VERSION_
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.9.0
