--- a/.github/workflows/pushUpdates.yml
+++ b/.github/workflows/pushUpdates.yml
@@ -14,11 +14,7 @@ jobs:
     steps:
       
       - name: Config and Push
-        run: |
-          rm .git -Recurse -Force -Confirm:$false
-          # $url = "https://api.github.com/repos/lin-ycv/EverythingCommandPalette/releases?per_page=5"
-          # $url = "https://api.github.com/repos/lin-ycv/EverythingCommandPalette/releases/latest"
-          
+        run: |          
           # Get Chocolatey manifests
           git clone --filter=blob:none --no-checkout --depth 1 https://github.com/lin-ycv/chocolatey-pkgs.git
           cd chocolatey-pkgs
@@ -49,4 +45,4 @@ jobs:
           cd .\EverythingCommandPalette
           rm .git -Recurse -Force -Confirm:$false
           Get-ChildItem *.* -Recurse | ForEach { (Get-Content $_) | ForEach  {$_ -Replace '_VERSION_', $Latest.Version} | ForEach  {$_ -Replace '_X64_', $Latest.URL64} | ForEach  {$_ -Replace '_HASH64_', $Latest.Checksum64} | ForEach  {$_ -Replace '_ARM64_', $Latest.ARM64} | ForEach  {$_ -Replace '_HASHarm64_', $Latest.Checksuma64} | Set-Content $_ }
-          ..\wingetcreate submit -p "New version: EverythingCmdPal version $Latest.Version" -t ${{ secrets.WINGETCREATE_GITHUB }} .
+          ..\wingetcreate submit ".\\" -p "New version: EverythingCmdPal version $Latest.Version" -t ${{ secrets.WINGETCREATE_GITHUB }} .
